# pokemon_collect

./: .gitignore  README.md  START.md  TODO  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 0397c9f20fc7_update_card_types_values.py  39b2a840a5df_initial_schema.py  76b89d562ee9_remove_unnecessary_field_from_set.py  7906845c291d_add_item_related_tables.py  7a3ed23b8d0e_remove_unnecessary_field_from_era.py  7d792f84d5bd_update_card_types_values.py  82ed957acaef_new_rarities.py  c99dc1f08b86_update_card_rarity_values.py  d24fa9d3179d_add_path_field_to_pokemon.py  e02e46dfe09b_unicity_constraints.py  ec729a8c1801_trainer_supporter.py
backend/app/: main.py
backend/app/db/: crud.py  database.py  dto.py  filters.py  models.py  schemas.py
backend/app/graphql/: inputs.py  resolvers.py  schema.py  types.py
backend/utils/: constants.py  io.py
backend/utils/airtable_converters/: pokemons.py
backend/utils/cards/: add_pokemon_link.py  create_cards_mutations.py
backend/utils/mutations/: send_mutations_stream.py  send_pokemons.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/graphql/: client.dart  queries.dart
lib/models/: pokemon.dart
lib/screens/: card_research_screen.dart  home_screen.dart  main_navigation_screen.dart  pokemon_detail_screen.dart
lib/widget/: pokemon_tile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
